# dbt-checkpoint

./: .dbt-checkpoint.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  HOOKS.md  LICENSE  PUBLISH.md  README.md  SUMMARY.md  action.yml  changelog.md  contribution-guide.md  entrypoint.sh  github-action.md  local-installation.md  mutmut_config.py  opslevel.yml  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: .pre-commit-config-action.yaml  CODEOWNERS  templates.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_template.md  feature_request.md
.github/workflows/: codeql-analysis.yaml  main.yml
checks/model-checks/: README.md  check-column-name-contract.md
dbt_checkpoint/: check_column_desc_are_same.py  check_column_name_contract.py  check_column_type_blacklist.py  check_database_casing_consistency.py  check_exposure_has_meta_keys.py  check_macro_arguments_have_desc.py  check_macro_has_description.py  check_macro_has_meta_keys.py  check_model_columns_have_desc.py  check_model_columns_have_meta_keys.py  check_model_has_all_columns.py  check_model_has_columns_with_types.py  check_model_has_constraints.py  check_model_has_contract.py  check_model_has_description.py  check_model_has_generic_constraints.py  check_model_has_group.py  check_model_has_labels_keys.py  check_model_has_meta_keys.py  check_model_has_primary_key_description.py  check_model_has_primary_key_tag.py  check_model_has_properties_file.py  check_model_has_tests.py  check_model_has_tests_by_group.py  check_model_has_tests_by_name.py  check_model_has_tests_by_type.py  check_model_materialization_by_childs.py  check_model_meta_key_accepted_values.py  check_model_name_contract.py  check_model_parents_and_childs.py  check_model_parents_database.py  check_model_parents_name_prefix.py  check_model_parents_schema.py  check_model_tags.py  check_script_has_no_table_name.py  check_script_pivot.py  check_script_ref_and_source.py  check_script_semicolon.py  check_seed_has_meta_keys.py  check_selectors_duplicate_names.py  (+46 more)
list-of-checks/: source-checks.md
list-of-checks/model-checks/: check-column-desc-are-same.md  check-column-name-contract.md  check-model-columns-have-desc.md  check-model-has-all-columns.md  check-model-has-description.md  check-model-has-meta-keys.md  check-model-has-properties-file.md  check-model-has-tests-by-group.md  check-model-has-tests-by-name.md  check-model-has-tests-by-type.md  check-model-has-tests.md  check-model-parents-and-childs.md
pre_commit_dbt/: check_column_desc_are_same.py  check_column_name_contract.py  check_column_type.py  check_exposure_has_models.py  check_exposure_has_owner.py  check_macro_arguments_have_desc.py  check_macro_has_description.py  check_model_columns_have_desc.py  check_model_has_all_columns.py  check_model_has_description.py  check_model_has_meta_keys.py  check_model_has_one_of_tests_by_name.py  check_model_has_properties_file.py  check_model_has_tests.py  check_model_has_tests_by_group.py  check_model_has_tests_by_name.py  check_model_has_tests_by_type.py  check_model_name_contract.py  check_model_parents_and_childs.py  check_model_parents_database.py  check_model_parents_schema.py  check_model_properties_exists.py  check_model_tags.py  check_script_has_no_table_name.py  check_script_ref_and_source.py  check_script_semicolon.py  check_source_childs.py  check_source_columns_have_desc.py  check_source_has_all_columns.py  check_source_has_freshness.py  check_source_has_loader.py  check_source_has_meta_keys.py  check_source_has_tests.py  check_source_has_tests_by_group.py  check_source_has_tests_by_name.py  check_source_has_tests_by_type.py  check_source_table_has_description.py  check_source_tags.py  dbt_clean.py  dbt_compile.py  (+14 more)
tests/: conftest.py  test_dbt_compile.py  test_dbt_run.py  test_dbt_test.py  test_utils.py
tests/unit/: check_model_has_labels_keys.py  check_source_has_labels_keys.py  test_check_column_desc_are_same.py  test_check_column_name_contract.py  test_check_column_type.py  test_check_column_type_blacklist.py  test_check_database_casing_consistency.py  test_check_exposure_has_meta_keys.py  test_check_macro_arguments_have_desc.py  test_check_macro_has_description.py  test_check_macro_has_meta_keys.py  test_check_model_columns_have_desc.py  test_check_model_columns_have_meta_keys.py  test_check_model_has_all_columns.py  test_check_model_has_columns_with_types.py  test_check_model_has_constraints.py  test_check_model_has_contract.py  test_check_model_has_description.py  test_check_model_has_generic_constraints.py  test_check_model_has_group.py  test_check_model_has_labels_keys.py  test_check_model_has_meta_keys.py  test_check_model_has_properties_file.py  test_check_model_has_tests.py  test_check_model_has_tests_by_group.py  test_check_model_has_tests_by_name.py  test_check_model_has_tests_by_type.py  test_check_model_materialization_by_childs.py  test_check_model_meta_key_accepted_values.py  test_check_model_name_contract.py  test_check_model_parents_and_childs.py  test_check_model_parents_database.py  test_check_model_parents_name_prefix.py  test_check_model_parents_schema.py  test_check_model_tags.py  test_check_script_has_no_table_name.py  test_check_script_pivot.py  test_check_script_ref_and_source.py  test_check_script_semicolon.py  test_check_seed_has_meta_keys.py  (+52 more)
