[metadata]
name = pre_commit_hooks
version = 1.0.0
description = List of [pre-commit](https://pre-commit.com) hooks to ensure the quality of your [dbt](https://www.getdbt.com) projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/offbi/pre-commit-dbt
author = Radek Tomšej
author_email = radek@tomsej.cz
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pyyaml
python_requires = >=3.7.1

[options.entry_points]
console_scripts =
    check-column-desc-are-same = pre_commit_dbt.check_column_desc_are_same:main
    check-column-name-contract = pre_commit_dbt.check_column_name_contract:main
    check-macro-has-description = pre_commit_dbt.check_macro_has_description:main
    check-macro-arguments-have-desc = pre_commit_dbt.check_macro_arguments_have_desc:main
    check-model-columns-have-desc = pre_commit_dbt.check_model_columns_have_desc:main
    check-model-has-all-columns = pre_commit_dbt.check_model_has_all_columns:main
    check-model-has-description = pre_commit_dbt.check_model_has_description:main
    check-model-has-meta-keys = pre_commit_dbt.check_model_has_meta_keys:main
    check-model-has-properties-file = pre_commit_dbt.check_model_has_properties_file:main
    check-model-has-tests-by-name = pre_commit_dbt.check_model_has_tests_by_name:main
    check-model-has-tests-by-type = pre_commit_dbt.check_model_has_tests_by_type:main
    check-model-has-tests-by-group = pre_commit_dbt.check_model_has_tests_by_group:main
    check-model-has-tests = pre_commit_dbt.check_model_has_tests:main
    check-model-name-contract = pre_commit_dbt.check_model_name_contract:main
    check-model-parents-and-childs = pre_commit_dbt.check_model_parents_and_childs:main
    check-model-parents-database = pre_commit_dbt.check_model_parents_database:main
    check-model-parents-schema = pre_commit_dbt.check_model_parents_schema:main
    check-model-tags = pre_commit_dbt.check_model_tags:main
    check-script-has-no-table-name = pre_commit_dbt.check_script_has_no_table_name:main
    check-script-ref-and-source = pre_commit_dbt.check_script_ref_and_source:main
    check-script-semicolon = pre_commit_dbt.check_script_semicolon:main
    check-source-childs = pre_commit_dbt.check_source_childs:main
    check-source-columns-have-desc = pre_commit_dbt.check_source_columns_have_desc:main
    check-source-has-all-columns = pre_commit_dbt.check_source_has_all_columns:main
    check-source-table-has-description = pre_commit_dbt.check_source_table_has_description:main
    check-source-has-freshness = pre_commit_dbt.check_source_has_freshness:main
    check-source-has-loader = pre_commit_dbt.check_source_has_loader:main
    check-source-has-meta-keys = pre_commit_dbt.check_source_has_meta_keys:main
    check-source-has-tests-by-name = pre_commit_dbt.check_source_has_tests_by_name:main
    check-source-has-tests-by-type = pre_commit_dbt.check_source_has_tests_by_type:main
    check-source-has-tests = pre_commit_dbt.check_source_has_tests:main
    check-source-tags = pre_commit_dbt.check_source_tags:main
    dbt-clean = pre_commit_dbt.dbt_clean:main
    dbt-compile = pre_commit_dbt.dbt_compile:main
    dbt-deps = pre_commit_dbt.dbt_deps:main
    dbt-docs-generate = pre_commit_dbt.dbt_docs_generate:main
    dbt-run = pre_commit_dbt.dbt_run:main
    dbt-test = pre_commit_dbt.dbt_test:main
    generate-missing-sources = pre_commit_dbt.generate_missing_sources:main
    generate-model-properties-file = pre_commit_dbt.generate_model_properties_file:main
    unify-column-description = pre_commit_dbt.unify_column_description:main
    replace-script-table-names = pre_commit_dbt.replace_script_table_names:main
    remove-script-semicolon = pre_commit_dbt.remove_script_semicolon:main

[bdist_wheel]
universal = 1

[options.packages.find]
exclude = tests*

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = .
omit =
    */.tox/*
    */__main__.py
    */setup.py
    */venv*/*
    tests/*

[coverage:report]
fail_under = 100
show_missing = True
skip_covered = True
skip_empty = True
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_no_return = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = BLK100,E231,W503
statistics = 1
max-line-length = 88

[mutmut]
runner = python -m pytest -x
tests_dir = tests/unit
