# NOTE ON PACKAGING CONFIGURATION:
#
# This file is now a tertiary configuration source, maintaining only:
# 1. Tool-specific configurations (pytest, coverage, flake8, mutmut, mypy).
# 2. The long list of entry points (console_scripts), which are marked as
#    'dynamic' in pyproject.toml to comply with the PEP 621 standard.
#
# All core package metadata (name, version, dependencies, python_requires, etc.)
# must now be defined in pyproject.toml.

[options]
# Configuration for setuptools package discovery.
packages = find:

# [options.entry_points] (KEEP: Loaded dynamically via pyproject.toml)
console_scripts =
    check-column-desc-are-same = dbt_checkpoint.check_column_desc_are_same:main
    check-column-name-contract = dbt_checkpoint.check_column_name_contract:main
    check-macro-has-description = dbt_checkpoint.check_macro_has_description:main
    check-macro-arguments-have-desc = dbt_checkpoint.check_macro_arguments_have_desc:main
    check-model-columns-have-desc = dbt_checkpoint.check_model_columns_have_desc:main
    check-model-has-all-columns = dbt_checkpoint.check_model_has_all_columns:main
    check-model-has-contract = dbt_checkpoint.check_model_has_contract:main
    check-model-has-constraints = dbt_checkpoint.check_model_has_constraints:main
    check-model-has-description = dbt_checkpoint.check_model_has_description:main
    check-model-has-meta-keys = dbt_checkpoint.check_model_has_meta_keys:main
    check-model-has-labels-keys = dbt_checkpoint.check_model_has_labels_keys:main
    check-model-has-properties-file = dbt_checkpoint.check_model_has_properties_file:main
    check-model-has-tests-by-name = dbt_checkpoint.check_model_has_tests_by_name:main
    check-model-has-tests-by-type = dbt_checkpoint.check_model_has_tests_by_type:main
    check-model-has-tests-by-group = dbt_checkpoint.check_model_has_tests_by_group:main
    check-model-has-tests = dbt_checkpoint.check_model_has_tests:main
    check-model-name-contract = dbt_checkpoint.check_model_name_contract:main
    check-model-parents-and-childs = dbt_checkpoint.check_model_parents_and_childs:main
    check-model-parents-database = dbt_checkpoint.check_model_parents_database:main
    check-model-parents-name-prefix = dbt_checkpoint.check_model_parents_name_prefix:main
    check-model-parents-schema = dbt_checkpoint.check_model_parents_schema:main
    check-model-tags = dbt_checkpoint.check_model_tags:main
    check-script-has-no-table-name = dbt_checkpoint.check_script_has_no_table_name:main
    check-script-ref-and-source = dbt_checkpoint.check_script_ref_and_source:main
    check-script-semicolon = dbt_checkpoint.check_script_semicolon:main
    check-source-childs = dbt_checkpoint.check_source_childs:main
    check-source-columns-have-desc = dbt_checkpoint.check_source_columns_have_desc:main
    check-source-has-all-columns = dbt_checkpoint.check_source_has_all_columns:main
    check-source-table-has-description = dbt_checkpoint.check_source_table_has_description:main
    check-source-has-freshness = dbt_checkpoint.check_source_has_freshness:main
    check-source-has-loader = dbt_checkpoint.check_source_has_loader:main
    check-source-has-meta-keys = dbt_checkpoint.check_source_has_meta_keys:main
    check-source-has-labels-keys = dbt_checkpoint.check_source_has_labels_keys:main
    check-source-has-tests-by-group = dbt_checkpoint.check_source_has_tests_by_group:main
    check-source-has-tests-by-name = dbt_checkpoint.check_source_has_tests_by_name:main
    check-source-has-tests-by-type = dbt_checkpoint.check_source_has_tests_by_type:main
    check-source-has-tests = dbt_checkpoint.check_source_has_tests:main
    check-source-tags = dbt_checkpoint.check_source_tags:main
    check-model-materialization-by-childs = dbt_checkpoint.check_model_materialization_by_childs:main
    dbt-clean = dbt_checkpoint.dbt_clean:main
    dbt-compile = dbt_checkpoint.dbt_compile:main
    dbt-deps = dbt_checkpoint.dbt_deps:main
    dbt-docs-generate = dbt_checkpoint.dbt_docs_generate:main
    dbt-parse = dbt_checkpoint.dbt_parse:main
    dbt-run = dbt_checkpoint.dbt_run:main
    dbt-test = dbt_checkpoint.dbt_test:main
    generate-missing-sources = dbt_checkpoint.generate_missing_sources:main
    generate-model-properties-file = dbt_checkpoint.generate_model_properties_file:main
    unify-column-description = dbt_checkpoint.unify_column_description:main
    replace-script-table-names = dbt_checkpoint.replace_script_table_names:main
    remove-script-semicolon = dbt_checkpoint.remove_script_semicolon:main
    check-snapshot-has-meta-keys = dbt_checkpoint.check_snapshot_has_meta_keys:main
    check-exposure-has-meta-keys = dbt_checkpoint.check_exposure_has_meta_keys:main
    check-macro-has-meta-keys = dbt_checkpoint.check_macro_has_meta_keys:main
    check-seed-has-meta-keys = dbt_checkpoint.check_seed_has_meta_keys:main
    check-test-has-meta-keys = dbt_checkpoint.check_test_has_meta_keys:main
    check-database-casing-consistency = dbt_checkpoint.check_database_casing_consistency:main

[bdist_wheel]
universal = 1

[options.packages.find]
exclude = tests*

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = .
omit =
    */.tox/*
    */__main__.py
    */setup.py
    */venv*/*
    tests/*

[coverage:report]
fail_under = 94
show_missing = True
skip_covered = True
skip_empty = True
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow-incomplete-defs = true
disallow-untyped-defs = true
no-implicit-optional = true
warn-no-return = false

[mypy-tests.*]
disallow-untyped-defs = false

[flake8]
ignore = BLK100,E231,W503
statistics = 1
max-line-length = 88

[mutmut]
runner = python -m pytest -x
tests_dir = tests/unit